--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install  --legacy-peer-deps
       
     - name: Build amd Commit files
-      run: node build.js
+      run: node ./build.js
       
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
